deploy/kubernetes/gatekeeper/01-disallow-privileged.yaml
# Gatekeeper ConstraintTemplate: 禁特权容器 (C6)
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: mxsecdisallowprivileged
spec:
  crd:
    spec:
      names:
        kind: MxsecDisallowPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package mxsec.disallowprivileged

        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          c.securityContext.privileged == true
          msg := sprintf("container %v: privileged=true forbidden", [c.name])
        }

        violation[{"msg": msg}] {
          c := input.review.object.spec.initContainers[_]
          c.securityContext.privileged == true
          msg := sprintf("initContainer %v: privileged=true forbidden", [c.name])
        }
