deploy/kubernetes/gatekeeper/03-require-non-root.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: mxsecrequirenonroot
spec:
  crd:
    spec:
      names:
        kind: MxsecRequireNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package mxsec.requirenonroot

        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          not run_as_non_root(c)
          msg := sprintf("container %v: must runAsNonRoot=true or runAsUser != 0", [c.name])
        }

        run_as_non_root(c) {
          c.securityContext.runAsNonRoot == true
        }
        run_as_non_root(c) {
          c.securityContext.runAsUser != 0
        }
        run_as_non_root(c) {
          input.review.object.spec.securityContext.runAsNonRoot == true
        }
