deploy/kubernetes/gatekeeper/04-disallow-host-namespaces.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: mxsecdisallowhostnamespaces
spec:
  crd:
    spec:
      names:
        kind: MxsecDisallowHostNamespaces
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package mxsec.disallowhostnamespaces

        violation[{"msg": msg}] {
          input.review.object.spec.hostNetwork == true
          msg := "spec.hostNetwork=true forbidden"
        }
        violation[{"msg": msg}] {
          input.review.object.spec.hostPID == true
          msg := "spec.hostPID=true forbidden"
        }
        violation[{"msg": msg}] {
          input.review.object.spec.hostIPC == true
          msg := "spec.hostIPC=true forbidden"
        }
