deploy/kubernetes/gatekeeper/06-require-resource-limits.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: mxsecrequireresourcelimits
spec:
  crd:
    spec:
      names:
        kind: MxsecRequireResourceLimits
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package mxsec.requireresourcelimits

        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          not c.resources.limits.memory
          msg := sprintf("container %v: resources.limits.memory required", [c.name])
        }
        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          not c.resources.limits.cpu
          msg := sprintf("container %v: resources.limits.cpu required", [c.name])
        }
